feat(chore): rough outline

--- a/paper/content/chapter2.tex
+++ b/paper/content/chapter2.tex
@@ -1,3 +1,5 @@
 % !TeX root = ../paper.tex
 \section{Theoretische Grundlagen} \label{ch:basics}
 
+\input{content/chapter2/chapter2_1.tex}
+\input{content/chapter2/chapter2_2.tex}
