--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -64,6 +64,9 @@
 \newpage \pagenumbering{arabic}
 \input content/chapter1.tex
 \newpage \input content/chapter2.tex
+\newpage \input content/chapter3.tex
+\newpage \input content/chapter4.tex
+\newpage \input content/chapter5.tex
 \newpage \addcontentsline{toc}{section}{Literatur} \printbibliography{}
 \newpage \addcontentsline{toc}{section}{Glossar} \glsaddall{} \printglossaries{}
 
