feat(bib): add pre-defined resources

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,3 +1,48 @@
 % Encoding: UTF-8
 
-@Comment{jabref-meta: databaseType:bibtex;}
+@Online{Wiki2018,
+  author   = {Chess Programming Wiki},
+  title    = {Simplified Evaluation Function},
+  year     = {2018},
+  url      = {https://www.chessprogramming.org/Simplified_Evaluation_Function},
+  urldate  = {2019-10-29},
+  file     = {:Wiki2018.pdf:PDF},
+  keywords = {evaluation function, simplified evaluation function},
+}
+
+@Article{Knuth1975,
+  author   = {Knuth, Donald and Moore, Ronald},
+  title    = {An analysis of alpha-beta pruning},
+  journal  = {Artificial Intelligence},
+  year     = {1975},
+  volume   = {6},
+  month    = {12},
+  pages    = {293-326},
+  file     = {:Knuth1975.pdf:PDF},
+  keywords = {alpha beta pruning},
+}
+
+@Article{Shannon1950,
+  author  = {Shannon, Claude},
+  title   = {XXII. Programming a computer for playing chess},
+  journal = {Philosophical Magazine},
+  year    = {1950},
+  volume  = {41},
+  month   = {03},
+  pages   = {256-275},
+  file    = {:Shannon1950.pdf:PDF},
+}
+
+@Book{Russell2010,
+  author    = {Russell, Stuart and Norvig, Peter},
+  title     = {Artificial Intelligence: A Modern Approach, 3rd Edition},
+  year      = {2010},
+  publisher = {Pearson},
+  file      = {:Russell2010.pdf:PDF},
+}
+
+@Comment{jabref-meta: databaseType:biblatex;}
+
+@Comment{jabref-meta: fileDirectory:/home/florian/workspace/python/chess-ai-paper/paper/pdfs;}
+
+@Comment{jabref-meta: fileDirectory-florian-arcanum:/home/florian/workspace/python/chess-ai-paper/paper/pdfs;}
