feat(chore): change submission date

--- a/paper/help/settings.tex
+++ b/paper/help/settings.tex
@@ -5,6 +5,6 @@
 \newcommand{\bearbeitung}{EINFÜGEN}
 \newcommand{\matrikelnrkursa}{1867805}
 \newcommand{\matrikelnrkursb}{EINFÜGEN}
-\newcommand{\abgabedatum}{EINFÜGEN}
+\newcommand{\abgabedatum}{20.04.2020}
 \newcommand{\ort}{Mannheim}
 \newcommand{\betreuer}{Prof. Dr. Karl Stroetmann}
