feat(theory): intro to evaluation functions

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -41,6 +41,28 @@
   file      = {:Russell2010.pdf:PDF},
 }
 
+@InProceedings{Qi2018,
+  author    = {Y. {Qi} and J. {Wang} and Q. {Zhu} and W. {Xu} and X. {Wu}},
+  title     = {Double parameter evaluation function based on path},
+  booktitle = {2018 Chinese Control And Decision Conference (CCDC)},
+  year      = {2018},
+  pages     = {236-239},
+  file      = {:Qi2018.pdf:PDF},
+  keywords  = {evaluation function},
+}
+
+@Thesis{Paulsen2009,
+  author      = {Paulsen, Philip},
+  title       = {Lernen unterschiedlich starker Bewertungsfunktionen aus Schach-Spielprotokollen},
+  institution = {TU Darmstadt},
+  year        = {2009},
+  date        = {2009-07-08},
+  url         = {http://www.ke.tu-darmstadt.de/lehre/arbeiten/diplom/2009/Paulsen_Philip.pdf},
+  urldate     = {2019-11-07},
+  file        = {:Paulsen2009.pdf:PDF},
+  keywords    = {evaluation function, alpha beta pruning},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: fileDirectory:/home/florian/workspace/python/chess-ai-paper/paper/pdfs;}
