feat(theory): intro to simplified evaluation function

--- a/paper/content/glossary.tex
+++ b/paper/content/glossary.tex
@@ -1,3 +1,4 @@
 % !TeX root = ../paper.tex
+\newglossaryentry{PI}{name={Perfekte Information},description={Ist ein Begriff der mathematischen Spieltheorie. Demnach besitzt ein Spiel perfekte Information, wenn jedem Spieler zum Zeitpunkt einer Entscheidung stets das vorangegangene Spielgeschehen bekannt ist}}
 
 \makeglossaries{}
