feat(theory): explain first two results of piece values

--- a/paper/content/acronyms.tex
+++ b/paper/content/acronyms.tex
@@ -1,5 +1,10 @@
 % !TeX root = ../paper.tex
 \newpage \section*{Abkürzungsverzeichnis} \addcontentsline{toc}{section}{Abkürzungsverzeichnis}
 \begin{acronym}
-	\acro{API}{Application Interface}
+	\acro{B}{Bauer}
+	\acro{K}{König}
+	\acro{L}{Läufer}
+	\acro{Q}{Königin (engl. \textit{Queen})}
+	\acro{S}{Springer}
+	\acro{T}{Turm}
 \end{acronym}
