--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -4,7 +4,7 @@
 \usepackage{graphicx,tabularx,xcolor,hyperref,scrlayer-scrpage,scrhack,enumitem,listings,xurl,pdfpages,courier,anyfontsize,csquotes,fontspec}
 \usepackage[style=apa]{biblatex}
 \usepackage[top=30mm,bottom=30mm,left=40mm,right=35mm]{geometry}
-\usepackage[printonlyused]{acronym}
+\usepackage{acronym}
 \usepackage[nonumberlist]{glossaries}
 \usepackage[english,ngerman]{babel}
 \usepackage{float}
