feat(theory): intro to mini-max-algorithm

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -63,6 +63,28 @@
   keywords    = {evaluation function, alpha beta pruning},
 }
 
+@Online{Shah2007,
+  author   = {Rajiv Bakulesh Shah},
+  title    = {minimax, In Dictionary of Algorithms and Data Structures},
+  year     = {2007},
+  url      = {https://xlinux.nist.gov/dads/HTML/minimax.html},
+  urldate  = {2019-12-20},
+  file     = {:Shah2007.pdf:PDF},
+  keywords = {minimax},
+}
+
+@Article{Elnaggar2014,
+  author  = {Elnaggar, Ahmed and Gadallah, Mahmoud and Mostafa, Mostafa and Eldeeb, Hesham},
+  title   = {Figure 1. A Comparative Study of Game Tree Searching Methods},
+  journal = {International Journal of Advanced Computer Science and Applications},
+  year    = {2014},
+  volume  = {5},
+  pages   = {68-77},
+  url     = {https://www.researchgate.net/figure/Game-tree-for-Tic-Tac-Toe-game-using-MiniMax-algorithm_fig1_262672371},
+  urldate = {2019-12-20},
+  file    = {:Elnaggar.pdf:PDF},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: fileDirectory:/home/florian/workspace/python/chess-ai-paper/paper/pdfs;}
