feat(theory): write explanation of pre-sorting

--- a/paper/content/chapter2.tex
+++ b/paper/content/chapter2.tex
@@ -2,5 +2,6 @@
 \section{Theoretische Grundlagen} \label{ch:basics}
 
 \input{content/chapter2/chapter2_1.tex}
+\input{content/chapter2/chapter2_4.tex}
 \input{content/chapter2/chapter2_3.tex}
 \input{content/chapter2/chapter2_2.tex}
