--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -85,6 +85,36 @@
   file    = {:Elnaggar.pdf:PDF},
 }
 
+@Online{Wiki2019,
+  author   = {Chess Programming Wiki},
+  title    = {Move Ordering},
+  year     = {2019},
+  url      = {https://www.chessprogramming.org/Move_Ordering},
+  urldate  = {2020-01-21},
+  file     = {:Wiki2019.pdf:PDF},
+  keywords = {presorting},
+}
+
+@Online{Wiki2019a,
+  author   = {Chess Programming Wiki},
+  title    = {Iterative Deepening},
+  year     = {2019},
+  url      = {https://www.chessprogramming.org/Move_Ordering},
+  urldate  = {2020-01-21},
+  file     = {:Wiki2019a.pdf:PDF},
+  keywords = {presorting},
+}
+
+@Online{Wiki2019b,
+  author   = {Chess Programming Wiki},
+  title    = {Depth-First},
+  year     = {2019},
+  url      = {https://www.chessprogramming.org/Move_Ordering},
+  urldate  = {2020-01-21},
+  file     = {:Wiki2019b.pdf:PDF},
+  keywords = {presorting},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: fileDirectory:/home/florian/workspace/python/chess-ai-paper/paper/pdfs;}
