--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -115,6 +115,17 @@
   keywords = {presorting},
 }
 
+@Article{Korf1985,
+  author   = {Richard E. Korf},
+  title    = {Depth-first Iterative-Deepening: An Optimal Admissible Tree Search},
+  journal  = {Artificial Intelligence},
+  year     = {1985},
+  volume   = {27},
+  pages    = {97--109},
+  file     = {:Korf1985.pdf:PDF},
+  keywords = {iterative deepening, pre-sorting},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: fileDirectory:/home/florian/workspace/python/chess-ai-paper/paper/pdfs;}
