fix: appearance of pseudocode

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -10,6 +10,11 @@
 \usepackage{float}
 \usepackage{amssymb}
 \usepackage{makecell}
+\usepackage{chessboard}
+\usepackage{skak}
+\usepackage{amsmath}
+\usepackage{algorithm}
+\usepackage{algpseudocode}
 
 \DeclareLanguageMapping{ngerman}{ngerman-apa}
 \bibliography{paper}
