feat: add missing information

--- a/paper/help/settings.tex
+++ b/paper/help/settings.tex
@@ -2,9 +2,9 @@
 \newcommand{\titel}{Erstellung einer Schach KI}
 \newcommand{\autora}{Florian Dahlitz}
 \newcommand{\autorb}{Moritz Heinz}
-\newcommand{\bearbeitung}{EINFÜGEN}
+\newcommand{\bearbeitung}{14.09.19-20.04.20}
 \newcommand{\matrikelnrkursa}{1867805}
-\newcommand{\matrikelnrkursb}{EINFÜGEN}
+\newcommand{\matrikelnrkursb}{9070408}
 \newcommand{\abgabedatum}{20.04.2020}
 \newcommand{\ort}{Mannheim}
 \newcommand{\betreuer}{Prof. Dr. Karl Stroetmann}
