fix: adjust sources

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -126,6 +126,15 @@
   keywords = {iterative deepening, pre-sorting},
 }
 
+@Online{Stuckardt,
+  author   = {Stuckardt, Roland},
+  title    = {Ruhesuche (Quiescence Search)},
+  url      = {http://www.stuckardt.de/index.php/schachengine-fischerle/suchtechniken-im-detail/72-ruhesuche-quiescence-search.html},
+  urldate  = {2020-01-21},
+  file     = {:Stuckardt.pdf:PDF},
+  keywords = {quiescence search},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: fileDirectory:/home/florian/workspace/python/chess-ai-paper/paper/pdfs;}
