fix: translate algorithm package components into german

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -50,6 +50,10 @@
 % Table Settings
 \renewcommand\theadfont{\bfseries}
 
+% Algorithms language
+\floatname{algorithm}{Algorithmus}
+\renewcommand{\listalgorithmname}{Algorithmenverzeichnis}
+
 \begin{document}
 
 % Table Settings
