feat: apply remarks of chapter eval function

--- a/paper/content/acronyms.tex
+++ b/paper/content/acronyms.tex
@@ -4,7 +4,7 @@
 	\acro{B}{Bauer}
 	\acro{K}{König}
 	\acro{L}{Läufer}
-	\acro{Q}{Königin (engl. \textit{Queen})}
+	\acro{D}{Dame}
 	\acro{S}{Springer}
 	\acro{T}{Turm}
 \end{acronym}
