refactor: apply snake case

--- a/notebooks/chess_test.ipynb
+++ b/notebooks/chess_test.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Imports"
    ]
@@ -32,7 +34,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Define start values"
    ]
@@ -43,15 +47,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "positionsAnalyzedAlphaBeta = 0\n",
-    "positionsAnalyzedMinimax = 1\n",
-    "cutOffs = 0\n",
-    "currentEval = 0"
+    "positions_analyzed_alpha_beta = 0\n",
+    "positions_analyzed_minimax = 1\n",
+    "cut_offs = 0\n",
+    "current_eval = 0"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Increment helper functions for Alpha-Beta and Minimax"
    ]
@@ -62,18 +68,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def incrementAlphaBeta():\n",
-    "    global positionsAnalyzedAlphaBeta\n",
-    "    positionsAnalyzedAlphaBeta = positionsAnalyzedAlphaBeta + 1\n",
+    "def increment_alpha_beta():\n",
+    "    global positions_analyzed_alpha_beta\n",
+    "    positions_analyzed_alpha_beta = positions_analyzed_alpha_beta + 1\n",
     "    \n",
-    "def incrementMinimax():\n",
-    "    global positionsAnalyzedMinimax\n",
-    "    positionsAnalyzedMinimax = positionsAnalyzedMinimax + 1"
+    "def increment_minimax():\n",
+    "    global positions_analyzed_minimax\n",
+    "    positions_analyzed_minimax = positions_analyzed_minimax + 1"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Helper function to reset Alpha-Beta and Minimax analysis"
    ]
@@ -85,30 +93,16 @@
    "outputs": [],
    "source": [
     "def reset():\n",
-    "    global positionsAnalyzedAlphaBeta\n",
-    "    positionsAnalyzedAlphaBeta = 0\n",
-    "    positionsAnalyzedMinimax = 0"
+    "    global positions_analyzed_alpha_beta\n",
+    "    positions_analyzed_alpha_beta = 0\n",
+    "    positions_analyzed_minimax = 0"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Maybe unnecessary chessboard creation"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "board = chess.Board()  # can it be removed?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Get users next move"
    ]
@@ -132,7 +126,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Wrapper for the humans turn"
    ]
@@ -155,7 +151,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Get move of random player"
    ]
@@ -173,7 +171,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "AI 1 player"
    ]
@@ -188,14 +188,16 @@
     "    moves = list(board.legal_moves)\n",
     "    for move in moves:\n",
     "        newboard = board.copy()\n",
-    "        move.score = staticAnalysis(newboard, move, board.turn)\n",
+    "        move.score = static_analysis(newboard, move, board.turn)\n",
     "    moves.sort(key=lambda move: move.score, reverse=True)\n",
     "    return moves[0].uci()"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Stockfish"
    ]
@@ -215,7 +217,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Alpha-Beta for AI"
    ]
@@ -226,33 +230,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def aiAlphaBeta(board, color, depth):\n",
-    "    global currentEval\n",
-    "    allMoves = list(board.legal_moves)\n",
-    "    for move in allMoves:\n",
+    "def ai_alpha_beta(board, color, depth):\n",
+    "    global current_eval\n",
+    "    all_moves = list(board.legal_moves)\n",
+    "    for move in all_moves:\n",
     "        board.push(move)\n",
     "        if board.is_checkmate():\n",
     "            move.score = color * 1000\n",
     "        elif board.is_stalemate():\n",
     "            move.score = 0\n",
     "        else:\n",
-    "            move.score = alphaBeta(board, -100000, +100000, -color, depth - 1)\n",
+    "            move.score = alpha_beta(board, -100000, +100000, -color, depth - 1)\n",
     "        board.pop()\n",
-    "    sortedMoves = sorted(allMoves, key=lambda move: move.score)\n",
+    "    sorted_moves = sorted(all_moves, key=lambda move: move.score)\n",
     "    \n",
     "    if color == -1:\n",
-    "        currentEval = sortedMoves[0].score\n",
-    "        return sortedMoves[0].uci()\n",
+    "        current_eval = sorted_moves[0].score\n",
+    "        return sorted_moves[0].uci()\n",
     "    else:\n",
-    "        currentEval = sortedMoves[-1].score\n",
-    "        return sortedMoves[-1].uci()"
+    "        current_eval = sorted_moves[-1].score\n",
+    "        return sorted_moves[-1].uci()"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Minimax for AI"
+    "Minimax for AI (never used)"
    ]
   },
   {
@@ -261,9 +267,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def aiMinimax(board, color, depth):\n",
-    "    allMoves = list(board.legal_moves)\n",
-    "    for move in allMoves:\n",
+    "def ai_minimax(board, color, depth):\n",
+    "    all_moves = list(board.legal_moves)\n",
+    "    for move in all_moves:\n",
     "        newboard = board.copy()\n",
     "        newboard.push(move)\n",
     "        if newboard.is_checkmate():\n",
@@ -273,14 +279,16 @@
     "        else:\n",
     "            move.score = minimax(newboard, -color, depth - 1)\n",
     "    if color == -1:\n",
-    "        return sorted(allMoves, key=lambda move: move.score)[0].uci()\n",
+    "        return sorted(all_moves, key=lambda move: move.score)[0].uci()\n",
     "    else:\n",
-    "        return sorted(allMoves, key=lambda move: move.score)[-1].uci()"
+    "        return sorted(all_moves, key=lambda move: move.score)[-1].uci()"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Minimax"
    ]
@@ -292,16 +300,15 @@
    "outputs": [],
    "source": [
     "def minimax(board, color, depth):\n",
-    "    incrementMinimax()\n",
+    "    increment_minimax()\n",
     "    \n",
     "    if depth == 0:\n",
-    "        return staticAnalysis(board)\n",
+    "        return static_analysis(board)\n",
     "    else:\n",
-    "        allMoves = list(board.legal_moves)\n",
-    "        \n",
+    "        all_moves = list(board.legal_moves)\n",
     "        if color == 1:\n",
     "            score = -color * 1000\n",
-    "            for move in allMoves:\n",
+    "            for move in all_moves:\n",
     "                newboard = board.copy()\n",
     "                newboard.push(move)\n",
     "                \n",
@@ -311,11 +318,10 @@
     "                    move.score = 0\n",
     "                else:\n",
     "                    move.score = minimax(newboard, -color, depth - 1)\n",
-    "                \n",
     "                score = max(move.score, score)\n",
     "        else:\n",
     "            score = -color * 1000\n",
-    "            for move in allMoves:\n",
+    "            for move in all_moves:\n",
     "                newboard = board.copy()\n",
     "                newboard.push(move)\n",
     "                \n",
@@ -324,15 +330,16 @@
     "                elif newboard.is_stalemate():\n",
     "                    move.score = 0\n",
     "                else:\n",
-    "                    move.score = minimax(newboard, -color, depth - 1)\n",
-    "                \n",
-    "                score = min(move.score,score)\n",
+    "                    move.score = minimax(newboard, -color, depth - 1)            \n",
+    "                score = min(move.score, score)\n",
     "        return score"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Alpha-Beta"
    ]
@@ -343,52 +350,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def alphaBeta(board, alpha, beta, color, depth):\n",
-    "    incrementAlphaBeta()\n",
-    "    global cutOffs\n",
+    "def alpha_beta(board, alpha, beta, color, depth):\n",
+    "    increment_alpha_beta()\n",
+    "    global cut_offs\n",
     "    if depth == 0:\n",
-    "        return staticAnalysis(board)\n",
+    "        return static_analysis(board)\n",
     "    else:\n",
-    "        allMoves = list(board.legal_moves)\n",
-    "        allMoves = sortMoves(allMoves, board)\n",
+    "        all_moves = list(board.legal_moves)\n",
+    "        all_moves = sort_moves(all_moves, board)\n",
     "        if color == 1:\n",
     "            score = -color * 1000\n",
-    "            for move in allMoves:\n",
+    "            for move in all_moves:\n",
     "                board.push(move)\n",
     "                if board.is_checkmate():\n",
     "                    move.score = color * 1000\n",
     "                elif board.is_stalemate():\n",
     "                    move.score = 0\n",
     "                else:\n",
-    "                    move.score = alphaBeta(board, alpha, beta, -color, depth - 1)\n",
+    "                    move.score = alpha_beta(board, alpha, beta, -color, depth - 1)\n",
     "                board.pop()\n",
     "                score = max(alpha, move.score)\n",
     "                alpha = max(alpha, move.score)\n",
     "                if alpha >= beta:\n",
-    "                    cutOffs += 1\n",
+    "                    cut_offs += 1\n",
     "                    break\n",
     "        else:\n",
     "            score = -color * 1000\n",
-    "            for move in allMoves:\n",
+    "            for move in all_moves:\n",
     "                board.push(move)\n",
     "                if board.is_checkmate():\n",
     "                    move.score = color * 1000\n",
     "                elif board.is_stalemate():\n",
     "                    move.score = 0\n",
     "                else:\n",
-    "                    move.score = alphaBeta(board, alpha, beta, -color, depth - 1)\n",
+    "                    move.score = alpha_beta(board, alpha, beta, -color, depth - 1)\n",
     "                board.pop()\n",
     "                score = min(score, move.score)\n",
     "                beta = min(beta, move.score)\n",
     "                if alpha >= beta:\n",
-    "                    cutOffs += 1\n",
+    "                    cut_offs += 1\n",
     "                    break\n",
     "        return score"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Static Analysis"
    ]
@@ -399,7 +408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def staticAnalysis(board):\n",
+    "def static_analysis(board):\n",
     "    score = 0\n",
     "    for square in range(0, 64):\n",
     "        piece = board.piece_at(square)\n",
@@ -444,7 +453,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Return a string representation of the player"
    ]
@@ -461,7 +472,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Helper function to display the chess board"
    ]
@@ -481,7 +494,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Helper function to sort the moves"
    ]
@@ -492,19 +507,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sortMoves(moves,board):\n",
-    "    tempCopyMoves = []\n",
+    "def sort_moves(moves,board):\n",
+    "    temp_copy_moves = []\n",
     "    for move in moves:\n",
     "        if board.is_capture(move):\n",
-    "            tempCopyMoves.insert(0, move)\n",
+    "            temp_copy_moves.insert(0, move)\n",
     "        else:\n",
-    "            tempCopyMoves.append(move)\n",
-    "    return tempCopyMoves"
+    "            temp_copy_moves.append(move)\n",
+    "    return temp_copy_moves"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Function coordinating the game. It's the entry point for the game."
    ]
@@ -531,7 +548,7 @@
     "            name = who(board.turn)\n",
     "            board.push_uci(uci)\n",
     "            board_stop = display_board(board, use_svg)\n",
-    "            html = f\"<b> Move {len(board.move_stack)} {name}, Play '{uci}': </b><br/>{board_stop} </b><br/>All Positions: {positionsAnalyzedMinimax}, After pruning: {positionsAnalyzedAlphaBeta}, Positions Cut: {1 - positionsAnalyzedAlphaBeta / positionsAnalyzedMinimax} </b><br/>Current Eval {currentEval} </b><br/>CutOffs {cutOffs}\"\n",
+    "            html = f\"<b> Move {len(board.move_stack)} {name}, Play '{uci}': </b><br/>{board_stop} </b><br/>All Positions: {positions_analyzed_minimax}, After pruning: {positions_analyzed_alpha_beta}, Positions Cut: {1 - positions_analyzed_alpha_beta / positions_analyzed_minimax} </b><br/>Current Eval {current_eval} </b><br/>CutOffs {cut_offs}\"\n",
     "            reset()\n",
     "            \n",
     "            if visual is not None:\n",
@@ -563,7 +580,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Start a game"
    ]
@@ -574,7 +593,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "play_game(aiAlphaBeta, aiAlphaBeta)"
+    "play_game(ai_alpha_beta, ai_alpha_beta)"
    ]
   },
   {
@@ -601,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.1-final"
   }
  },
  "nbformat": 4,
