fix: reference global variable

--- a/notebooks/chess_test.ipynb
+++ b/notebooks/chess_test.ipynb
@@ -94,6 +94,7 @@
    "source": [
     "def reset():\n",
     "    global positions_analyzed_alpha_beta\n",
+    "    global positions_analyzed_minimax\n",
     "    positions_analyzed_alpha_beta = 0\n",
     "    positions_analyzed_minimax = 0"
    ]
