fix: adjust citation

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -135,6 +135,38 @@
   keywords = {quiescence search},
 }
 
+@Misc{Wikipedia2018,
+  author  = {Wikipedia},
+  title   = {50-Züge-Regel --- Wikipedia{,} Die freie Enzyklopädie},
+  year    = {2018},
+  url     = {https://de.wikipedia.org/w/index.php?title=50-Z%C3%BCge-Regel&oldid=183817296},
+  urldate = {2020-02-01},
+}
+
+@Misc{Wikipedia2020,
+  author  = {Wikipedia},
+  title   = {Minimax-Algorithmus --- Wikipedia{,} Die freie Enzyklopädie},
+  year    = {2020},
+  url     = {https://de.wikipedia.org/w/index.php?title=Minimax-Algorithmus&oldid=195739275},
+  urldate = {2020-02-01},
+}
+
+@Misc{Wikipedia2020a,
+  author  = {{Wikipedia contributors}},
+  title   = {Shannon number --- {Wikipedia}{,} The Free Encyclopedia},
+  year    = {2020},
+  url     = {https://en.wikipedia.org/w/index.php?title=Shannon_number&oldid=939493351},
+  urldate = {2020-02-01},
+}
+
+@Misc{Wikipedia2019,
+  author  = {Wikipedia},
+  title   = {Alpha-Beta-Suche --- Wikipedia{,} Die freie Enzyklopädie},
+  year    = {2019},
+  url     = {https://de.wikipedia.org/w/index.php?title=Alpha-Beta-Suche&oldid=191701260},
+  urldate = {2020-02-01},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: fileDirectory:/home/florian/workspace/python/chess-ai-paper/paper/pdfs;}
