fix(literature): adjust links

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -99,20 +99,20 @@
   author   = {Chess Programming Wiki},
   title    = {Iterative Deepening},
   year     = {2019},
-  url      = {https://www.chessprogramming.org/Move_Ordering},
+  url      = {https://www.chessprogramming.org/Iterative_Deepening},
   urldate  = {2020-01-21},
   file     = {:Wiki2019a.pdf:PDF},
-  keywords = {presorting},
+  keywords = {iterative deepening},
 }
 
 @Online{Wiki2019b,
   author   = {Chess Programming Wiki},
   title    = {Depth-First},
   year     = {2019},
-  url      = {https://www.chessprogramming.org/Move_Ordering},
+  url      = {https://www.chessprogramming.org/Depth-First},
   urldate  = {2020-01-21},
   file     = {:Wiki2019b.pdf:PDF},
-  keywords = {presorting},
+  keywords = {depth-first},
 }
 
 @Article{Korf1985,
